modules/security_groups/security_groups.tf
resource "aws_security_group" "server" {
  name        = "server-security-group"
  description = "security group for server instances"
  vpc_id      = var.vpc_id  

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  #HTTP
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  #HTTPS
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Allow ICMP (ping) traffic
  ingress {
    from_port   = -1
    to_port     = -1
    protocol    = "icmp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "prometheus" {
  name        = "prometheus-security-group"
  description = "security group for prometheus server"
  vpc_id      = var.vpc_id  

  #prometheus
  ingress {
    from_port   = 9090
    to_port     = 9090
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  #alertmanager
  ingress {
    from_port   = 9093
    to_port     = 9093
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "grafana" {
  name        = "grafana-security-group"
  description = "security group for grafana server"
  vpc_id      = var.vpc_id  

  ingress {
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "node_exporter" {
  name        = "node-exporter-sg"
  description = "Allow Prometheus Node Exporter metrics"
  vpc_id      = var.vpc_id  

  ingress {
    from_port   = 9100
    to_port     = 9100
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] # or restrict to your Prometheus server IP for security
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

output "security_group_ids" {
  value = {
    server              = aws_security_group.server.id,
    prometheus          = aws_security_group.prometheus.id,
    grafana             = aws_security_group.grafana.id,
    node-exporter       = aws_security_group.node_exporter.id
  }
}
